docs: Relint of the swaggo for the backend
