# server/docs/swagger.yaml
@@ -19,6 +19,15 @@ definitions:
           $ref: '#/definitions/serviceinterface.ServiceStatus'
         type: array
     type: object
+  controllers.TokenCreateRequest:
+    properties:
+      provider:
+        type: string
+      token:
+        type: string
+      user_id:
+        type: string
+    type: object
   controllers.TokenInformations:
     properties:
       provider:
@@ -258,31 +267,8 @@ paths:
       summary: Activate/Deactivate an area
       tags:
       - Area
-  /area/list:
-    get:
-      consumes:
-      - application/json
-      description: List all user's area
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/areas.userArea'
-            type: array
-        "401":
-          description: Unauthorized
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      summary: List User's area
-      tags:
-      - Area
-  /create/{service}:
-    get:
+  /area/create/{service}:
+    post:
       consumes:
       - application/json
       description: Register a new Area in the application
@@ -314,7 +300,7 @@ paths:
       summary: Create a new Area
       tags:
       - Area
-  /create/list:
+  /area/create/list:
     get:
       consumes:
       - application/json
@@ -335,6 +321,29 @@ paths:
           description: Internal Server Error
           schema: {}
       summary: List available areas
+      tags:
+      - Area
+  /area/list:
+    get:
+      consumes:
+      - application/json
+      description: List all user's area
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/areas.userArea'
+            type: array
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: List User's area
       tags:
       - Area
   /login/:
@@ -426,15 +435,15 @@ paths:
       - Account
   /ping:
     get:
-      description: pong
+      description: Pong
       produces:
       - application/json
       responses:
         "200":
           description: pong
-      summary: prints pong
+      summary: Prints pong
       tags:
-      - ping
+      - Ping
   /sign-up/:
     post:
       consumes:
@@ -463,6 +472,31 @@ paths:
       summary: Sign-up a new account
       tags:
       - Account
+  /token:
+    get:
+      consumes:
+      - application/json
+      description: Get all the tokens of the current logged user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Token'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth @Tags         Token: []
+      summary: Get all the tokens from a user
+      tags:
+      - Token
   /token/:
     delete:
       consumes:
@@ -481,20 +515,18 @@ paths:
         "500":
           description: Internal Server Error
           schema: {}
+      security:
+      - ApiKeyAuth: []
       summary: Delete a token
       tags:
       - Token
+  /token/{provider}:
     post:
       consumes:
       - application/json
-      description: Get the tokens from a user_id and a provider
+      description: Get the tokens from the current userID and a provider
       parameters:
-      - description: Id of the user
-        in: path
-        name: user_id
-        required: true
-        type: string
-      - description: Provider of the Remote Service
+      - description: Remote Service Name
         in: path
         name: provider
         required: true
@@ -512,36 +544,9 @@ paths:
         "500":
           description: Internal Server Error
           schema: {}
+      security:
+      - ApiKeyAuth: []
       summary: Get user's token
-      tags:
-      - Token
-  /token/{user_id}:
-    get:
-      consumes:
-      - application/json
-      description: Get all the tokens from a user_id
-      parameters:
-      - description: Id of the user
-        in: path
-        name: user_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Token'
-            type: array
-        "400":
-          description: Bad Request
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      summary: Get all the tokens from a user
       tags:
       - Token
   /token/create/:
@@ -549,6 +554,13 @@ paths:
       consumes:
       - application/json
       description: Create a token from a user_id and a provider
+      parameters:
+      - description: Token creation request informations
+        in: body
+        name: tokenCreateRequest
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.TokenCreateRequest'
       produces:
       - application/json
       responses:
@@ -562,6 +574,8 @@ paths:
         "500":
           description: Internal Server Error
           schema: {}
+      security:
+      - ApiKeyAuth: []
       summary: Create a token
       tags:
       - Token
@@ -599,4 +613,9 @@ paths:
       summary: Webhook Endpoint
       tags:
       - Area
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
